@@ -16,6 +16,7 @@ conglomerate_SOURCES =      \
   global.h                  \
   cong-app.h                \
   cong-attribute-editor.h   \
+  cong-attribute-editor-cdata.h \
   cong-dialog.h             \
   cong-dispspec.h           \
   cong-dispspec-registry.h  \
@@ -83,6 +84,7 @@ conglomerate_SOURCES =      \
   fo.h                      \
   cong-app.c                \
   cong-attribute-editor.c   \
+  cong-attribute-editor-cdata.c \
   cong-debug-log-view.c     \
   cong-dialog.c             \
   cong-dispspec.c           \
